--- a/cards/index.html
+++ b/cards/index.html
@@ -12,6 +12,7 @@
     <div
       class="flex flex-col justify-center items-center min-h-screen space-y-7"
     >
+      <!-- Card 1 -->
       <div class="border rounded-lg shadow-lg w-[450px]">
         <img src="images/2.jpg" alt="" class="rounded-t-lg h-64 w-full" />
         <div class="p-7">
@@ -35,6 +36,69 @@
             Cancel
           </button>
         </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="rounded-lg border shadow-lg p-3 mt-4 w-[450px] bg-gray-100">
+        <section class="p-3 bg-purple-500 rounded mb-2 text-white relative">
+          $45/Hour
+          <div
+            class="absolute right-0 -top-1 border-l-8 border-b-8 size-7 rounded-l bg-purple-300"
+          ></div>
+        </section>
+
+        <section
+          class="bg-purple-500 py-4 px-5 rounded-tl-lg rounded-br-lg flex flex-col justify-center space-y-4"
+        >
+          <div class="relative self-center size-60">
+            <img
+              src="images/14.jpg"
+              alt=""
+              class="absolute inset-0 z-10 w-full h-full rounded-full border-4"
+            />
+
+            <div
+              class="absolute inset-0 z-20 rounded-full bg-transparent border-4 border-fuchsia-100 overflow-clip"
+            >
+              <div
+                class="absolute bottom-5 bg-white bg-opacity-70 text-center font-bold h-10 w-full p-3"
+              >
+                Baker Ladel
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="bg-white p-5 my-3 rounded">
+          <h3 class="text-xl font-semibold tracking-wider">UI/UX Designer</h3>
+          <p class="uppercase text-sm">Corporate Office</p>
+
+          <div class="flex justify-between items-center px-4 mt-7">
+            <div class="text-sm">
+              <p>Experience - 03 Years</p>
+              <p>Joined 23 May 2024</p>
+            </div>
+            <div>
+              <svg
+                class="size-12 text-purple-800"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="none"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M12 13V4M7 14H5a1 1 0 0 0-1 1v4a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-4a1 1 0 0 0-1-1h-2m-1-5-4 5-4-5m9 8h.01"
+                />
+              </svg>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
   </body>
