website top banner

--- a/salespecks-website/index.html
+++ b/salespecks-website/index.html
@@ -45,5 +45,30 @@
         <div>Login</div>
       </div>
     </nav>
+
+    <section
+      id="pageBanner"
+      class="bg-gray-200 w-full flex justify-center items-end"
+    >
+      <div
+        style="background-image: url('images/23.png')"
+        class="bg-cover size-60 md:size-80 flex-shrink-0"
+      ></div>
+      <div class="max-w-2xl my-5 p-3">
+        <h1 class="text-3xl md:text-5xl font-bold">
+          Selling is what we do best at Salespeck
+        </h1>
+        <p class="text-sm mt-3">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis
+          illum totam, et maiores consectetur provident. Quo voluptatum adipisci
+          at eveniet?
+        </p>
+        <button
+          class="px-4 py-2 w-full border border-orange-800 rounded-lg hover:bg-orange-500/30 mt-7 md:mt-14"
+        >
+          Explore
+        </button>
+      </div>
+    </section>
   </body>
 </html>
