--- a/salespecks-website/index.html
+++ b/salespecks-website/index.html
@@ -291,5 +291,150 @@
         </div>
       </div>
     </section>
+    <section
+      id="testimonial"
+      class="flex flex-col justify-center items-center my-20"
+    >
+      <h2 class="text-4xl md:text-5xl font-bold my-10 text-orange-800">
+        Testimonial
+      </h2>
+
+      <div class="grid md:grid-cols-2 lg:grid-cols-4 items-end">
+        <div class="p-3 mx-3">
+          <div
+            class="relative rounded-lg shadow-lg p-3 border mb-5 bg-slate-600 text-white"
+          >
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum
+            odit officiis ipsam et culpa commodi tenetur ad numquam totam
+            repellendus!
+            <button
+              class="bg-orange-600 rounded text-white text-sm px-2 border hover:bg-orange-700"
+            >
+              more
+            </button>
+
+            <div class="absolute">
+              <svg
+                class="size-8 fill-slate-600"
+                width="100"
+                height="100"
+                viewBox="0 0 100 100"
+                xmlns="http://www.w3.org/2000/svg"
+                class="triangle"
+              >
+                <polygon points="50,85 90,15 10,15" />
+              </svg>
+            </div>
+          </div>
+          <div class="flex items-center space-x-3">
+            <img src="images/13.jpg" alt="" class="size-20 rounded-full" />
+            <div class="text-slate-800">
+              <h5 class="font-bold">Deji Mathew</h5>
+              <p>CEO</p>
+            </div>
+          </div>
+        </div>
+        <div class="p-3 mx-3">
+          <div
+            class="relative rounded-lg shadow-lg p-3 border mb-5 bg-slate-600 text-white"
+          >
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum
+            corrupti qui, eligendi praesentium reprehenderit ratione natus
+            aliquid optio explicabo et tenetur facilis enim, culpa ex voluptate
+            eaque. Quod, sequi illo.
+            <button
+              class="bg-orange-600 rounded text-white text-sm px-2 border hover:bg-orange-700"
+            >
+              more
+            </button>
+
+            <div class="absolute">
+              <svg
+                class="size-8 fill-slate-600"
+                width="100"
+                height="100"
+                viewBox="0 0 100 100"
+                xmlns="http://www.w3.org/2000/svg"
+                class="triangle"
+              >
+                <polygon points="50,85 90,15 10,15" />
+              </svg>
+            </div>
+          </div>
+          <div class="flex items-center space-x-3">
+            <img src="images/6.jpg" alt="" class="size-20 rounded-full" />
+            <div class="text-slate-800">
+              <h3 class="font-bold">Sarath Eli</h3>
+              <p>CTO</p>
+            </div>
+          </div>
+        </div>
+        <div class="p-3 mx-3">
+          <div
+            class="relative rounded-lg shadow-lg p-3 border mb-5 bg-slate-600 text-white"
+          >
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo,
+            distinctio!
+            <button
+              class="bg-orange-600 rounded text-white text-sm px-2 border hover:bg-orange-700"
+            >
+              more
+            </button>
+
+            <div class="absolute">
+              <svg
+                class="size-8 fill-slate-600"
+                width="100"
+                height="100"
+                viewBox="0 0 100 100"
+                xmlns="http://www.w3.org/2000/svg"
+                class="triangle"
+              >
+                <polygon points="50,85 90,15 10,15" />
+              </svg>
+            </div>
+          </div>
+          <div class="flex items-center space-x-3">
+            <img src="images/14.jpg" alt="" class="size-20 rounded-full" />
+            <div class="text-slate-800">
+              <h3 class="font-bold">James Cameron</h3>
+              <p>Sales Manager</p>
+            </div>
+          </div>
+        </div>
+        <div class="p-3 mx-3">
+          <div
+            class="relative rounded-lg shadow-lg p-3 border mb-5 bg-slate-600 text-white"
+          >
+            Lorem ipsum dolor sit amet.
+            <button
+              class="bg-orange-600 rounded text-white text-sm px-2 border hover:bg-orange-700"
+            >
+              more
+            </button>
+
+            <div class="absolute">
+              <svg
+                class="size-8 fill-slate-600"
+                width="100"
+                height="100"
+                viewBox="0 0 100 100"
+                xmlns="http://www.w3.org/2000/svg"
+                class="triangle"
+              >
+                <polygon points="50,85 90,15 10,15" />
+              </svg>
+            </div>
+          </div>
+          <div class="flex items-center space-x-3">
+            <img src="images/18.jpg" alt="" class="size-20 rounded-full" />
+            <div class="text-slate-800">
+              <h3 class="font-bold">Maria Uche</h3>
+              <p>UI Expert</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
