--- a/salespecks-website/index.html
+++ b/salespecks-website/index.html
@@ -436,5 +436,65 @@
         </div>
       </div>
     </section>
+    <footer
+      style="background-image: url('images/1.jpg')"
+      class="border-t border-gray-200"
+    >
+      <div class="backdrop-blur-2xl text-white bg-slate-700/60">
+        <section
+          id="footercontent"
+          class="flex flex-col lg:flex-row lg:justify-between p-5 space-y-5"
+        >
+          <div class="basis-2/5">
+            <h3 class="text-xl font-bold uppercasemt-5">Salespecks</h3>
+            <p class="mt-4 leading-loose text-sm">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Architecto, deserunt nostrum. Quisquam ea, quidem nam cupiditate
+              ipsa voluptate repellendus laborum!
+            </p>
+          </div>
+
+          <div
+            class="flex flex-col md:flex-row md:flex-grow md:justify-between space-y-10 md:space-y-0"
+          >
+            <ul class="text-sm space-y-4">
+              <h3 class="font-bold uppercase">Compay</h3>
+              <li>About</li>
+              <li>Features</li>
+              <li>Work</li>
+              <li>Career</li>
+            </ul>
+            <ul class="text-sm space-y-4">
+              <h3 class="font-bold uppercase">Help</h3>
+              <li>Customer Support</li>
+              <li>Delivery Details</li>
+              <li>Terms & Conditions</li>
+              <li>Privacy Policy</li>
+            </ul>
+            <ul class="text-sm space-y-4">
+              <h3 class="font-bold uppercase">Resources</h3>
+              <li>Free eBooks</li>
+              <li>Development Tutorial</li>
+              <li>How to - Blog</li>
+              <li>Youtube Playlist</li>
+            </ul>
+          </div>
+        </section>
+
+        <section>
+          <div class="border border-gray-200 my-5 w-11/12 mx-auto"></div>
+          <div
+            class="flex flex-col md:flex-row md:justify-between md:items-center p-3 space-y-4 md:space-y-0"
+          >
+            <div>&copy; Copyright 2024. All Rights Reserved</div>
+            <img
+              src="https://cdn.rareblocks.xyz/collection/clarity-ecommerce/images/footer/1/payment-methods.png"
+              alt=""
+              class="w-72"
+            />
+          </div>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
