--- a/chat-ui/index.html
+++ b/chat-ui/index.html
@@ -297,6 +297,185 @@
           </svg>
         </section>
       </div>
+
+      <div class="flex flex-col bg-white w-[400px] rounded-xl shadow-xl">
+        <section class="flex justify-between p-3 mb-5 h-[70px] shadow-lg">
+          <div class="flex items-center space-x3">
+            <svg
+              class="w-6 h-6 text-blue-600 dark:text-white"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="none"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M5 12h14M5 12l4-4m-4 4 4 4"
+              />
+            </svg>
+            <h3 class="font-black text-slate-700">Jarson</h3>
+          </div>
+          <div class="flex items-center space-x-3 text-blue-700">
+            <svg
+              class="size-5"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M7.978 4a2.553 2.553 0 0 0-1.926.877C4.233 6.7 3.699 8.751 4.153 10.814c.44 1.995 1.778 3.893 3.456 5.572 1.68 1.679 3.577 3.018 5.57 3.459 2.062.456 4.115-.073 5.94-1.885a2.556 2.556 0 0 0 .001-3.861l-1.21-1.21a2.689 2.689 0 0 0-3.802 0l-.617.618a.806.806 0 0 1-1.14 0l-1.854-1.855a.807.807 0 0 1 0-1.14l.618-.62a2.692 2.692 0 0 0 0-3.803l-1.21-1.211A2.555 2.555 0 0 0 7.978 4Z"
+              />
+            </svg>
+            <svg
+              class="size-5"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M14 7a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V7Zm2 9.387 4.684 1.562A1 1 0 0 0 22 17V7a1 1 0 0 0-1.316-.949L16 7.613v8.774Z"
+                clip-rule="evenodd"
+              />
+            </svg>
+            <svg
+              class="size-5"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10S2 17.523 2 12Zm9.408-5.5a1 1 0 1 0 0 2h.01a1 1 0 1 0 0-2h-.01ZM10 10a1 1 0 1 0 0 2h1v3h-1a1 1 0 1 0 0 2h4a1 1 0 1 0 0-2h-1v-4a1 1 0 0 0-1-1h-2Z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </div>
+        </section>
+        <section class="p-2">
+          <div class="mb-2">
+            <h4 class="text-gray-500 text-center mb-2">10:00AM</h4>
+            <div class="flex space-x-3">
+              <img
+                src="images/8.jpg"
+                alt="avatar"
+                class="size-10 rounded-full"
+              />
+              <p class="p-2 bg-blue-700 text-white rounded-tr-lg rounded-b-lg">
+                Hello Deji, are you in the office yet?
+              </p>
+            </div>
+          </div>
+          <div class="mb-2">
+            <h4 class="text-gray-500 text-center mb-2">10:02AM</h4>
+            <div class="flex justify-end space-x-3">
+              <p class="p-2 bg-blue-700 text-white rounded-tl-lg rounded-b-lg">
+                Yep, whats up?
+              </p>
+            </div>
+          </div>
+          <div class="mb-2">
+            <h4 class="text-gray-500 text-center mb-2">10:02AM</h4>
+            <div class="flex justify-end space-x-3">
+              <p class="p-2 bg-blue-700 text-white rounded-tl-lg rounded-b-lg">
+                Is it time for the meeting already?
+              </p>
+            </div>
+          </div>
+          <div class="mb-2">
+            <h4 class="text-gray-500 text-center mb-2">10:03AM</h4>
+            <div class="flex space-x-3">
+              <img src="images/8.jpg" alt="" class="size-10 rounded-full" />
+              <p class="p-2 bg-blue-700 text-white rounded-tr-lg rounded-b-lg">
+                yeah, we got to come along with all the files for Mr. brown.
+                Also make sure you come along with the presentation for
+                management.
+              </p>
+            </div>
+          </div>
+          <div class="mb-2">
+            <h4 class="text-gray-500 text-center mb-2">10:12AM</h4>
+            <div class="flex justify-end space-x-3">
+              <p class="p-2 bg-blue-700 text-white rounded-tl-lg rounded-b-lg">
+                sure, I am already coming with them
+              </p>
+            </div>
+          </div>
+
+          <div class="mb-2">
+            <h4 class="text-gray-500 text-center mb-2">10:00AM</h4>
+            <div class="flex space-x-3">
+              <img
+                src="images/8.jpg"
+                alt="avatar"
+                class="size-10 rounded-full"
+              />
+              <div
+                class="flex items-center justify-start space-x-3 bg-gray-200 rounded-2xl px-2"
+              >
+                <div class="size-2 px-1 bg-gray-300 rounded-full"></div>
+                <div class="size-2 px-1 bg-gray-400 rounded-full"></div>
+                <div class="size-2 px-1 bg-gray-300 rounded-full"></div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="m-5">
+          <div class="flex bg-gray-200 w-full rounded-xl p-2">
+            <svg
+              class="size-6 rotate-45 text-gray-800"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="none"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M7 8v8a5 5 0 1 0 10 0V6.5a3.5 3.5 0 1 0-7 0V15a2 2 0 0 0 4 0V8"
+              />
+            </svg>
+            <input
+              type="text"
+              placeholder="type a message"
+              class="w-full bg-transparent outline-0 px-2"
+            />
+            <svg
+              class="size-6 rotate-45 text-blue-700"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M12 2a1 1 0 0 1 .932.638l7 18a1 1 0 0 1-1.326 1.281L13 19.517V13a1 1 0 1 0-2 0v6.517l-5.606 2.402a1 1 0 0 1-1.326-1.281l7-18A1 1 0 0 1 12 2Z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </div>
+        </section>
+      </div>
     </div>
   </body>
 </html>
