--- a/index.html
+++ b/index.html
@@ -4,6 +4,143 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tailwindcss components examples</title>
+    <link rel="stylesheet" href="css/output.css" />
   </head>
-  <body></body>
+  <body>
+    <ul class="list-none space-y-2 m-5">
+      <li>
+        <a
+          href="./buttons/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Buttons</a
+        >
+      </li>
+      <li>
+        <a
+          href="./avatars/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Avatars</a
+        >
+      </li>
+      <li>
+        <a
+          href="./badges/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Badges</a
+        >
+      </li>
+      <li>
+        <a
+          href="./cards/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Cards</a
+        >
+      </li>
+      <li>
+        <a
+          href="./menu/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Menu 1</a
+        >
+      </li>
+      <li>
+        <a
+          href="./side-bar-menu/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Side bar menu</a
+        >
+      </li>
+      <li>
+        <a
+          href="./vertical-menu-bar/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Vertical bar menu</a
+        >
+      </li>
+      <li>
+        <a
+          href="./dark-mode/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Dark mode</a
+        >
+      </li>
+      <li>
+        <a
+          href="./dropdown-menu/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Dropdown menu</a
+        >
+      </li>
+      <li>
+        <a
+          href="./footer/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Footer</a
+        >
+      </li>
+      <li>
+        <a
+          href="./accordion/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Accordion</a
+        >
+      </li>
+      <li>
+        <a
+          href="./modal/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Modal</a
+        >
+      </li>
+      <li>
+        <a
+          href="./price-list/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Price list</a
+        >
+      </li>
+      <li>
+        <a
+          href="./login-form/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Login form</a
+        >
+      </li>
+      <li>
+        <a
+          href="./animated-gradient-bg/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Animated gradient background</a
+        >
+      </li>
+      <li>
+        <a
+          href="./animated-image-bg/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Animated image background</a
+        >
+      </li>
+      <li>
+        <a
+          href="./image-gallery/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Image gallery</a
+        >
+      </li>
+      <li>
+        <a
+          href="./salespecks-website/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Website</a
+        >
+      </li>
+      <li>
+        <a
+          href="./chat-ui/index.html"
+          class="text-lg text-blue-600 underline visited:text-blue-600 hover:text-blue-800 transition"
+          >Chat UI</a
+        >
+      </li>
+    </ul>
+  </body>
 </html>
